--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 
 orbs:
   python: circleci/python@0.2.1
+  heroku: circleci/heroku@1.2.4
 
 jobs:
   build-and-test:
@@ -32,8 +33,16 @@ jobs:
           name: Send coverage to Codecov
           command: |
             bash <(curl -s https://codecov.io/bash) -Z
+  heroku/deploy-via-git:
+    requires:
+      - build-and-test
+    api-key: HEROKU_API_STAGING_KEY
+    filters:
+      branches:
+        only: chore-setup-continuos-deployment
 
 workflows:
   main:
     jobs:
       - build-and-test
+
