chore: Updated config.yml
- deploy develop branch to staging heroku app
- deploy main branch to production heroku app
- run semantic_release publish on main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ orbs:
 
 jobs:
   build-and-test:
+    description: Build and Test
     executor: python/default
     steps:
       - checkout
@@ -33,16 +34,47 @@ jobs:
           name: Send coverage to Codecov
           command: |
             bash <(curl -s https://codecov.io/bash) -Z
+
   heroku/deploy-via-git:
-    requires:
-      - build-and-test
-    api-key: HEROKU_API_STAGING_KEY
-    filters:
-      branches:
-        only: chore-setup-continuos-deployment
+    description: Heroku deploy
+    executor: heroku/default
+    steps:
+      - checkout
+      - heroku/install
+      - heroku/deploy-via-git
 
 workflows:
   main:
     jobs:
       - build-and-test
-
+      - heroku/deploy-via-git:
+          context:
+            - swiftflame-heroku-staging
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: develop
+          force: true
+      - heroku/deploy-via-git:
+          context:
+            - swiftflame-heroku-production
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: main
+          force: true
+          pre-steps:
+            - run:
+                name: Running pre-deploy
+                command: |
+                  sudo apt update
+                  sudo apt install python3-pip
+                  /usr/bin/python3 -m pip install --upgrade pip
+          post-steps:
+            - run:
+                name: Running post-deploy
+                command: |
+                  /usr/bin/python3 -m pip install -r requirements.txt
+                  semantic-release publish
