--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,4 +77,6 @@ workflows:
                 name: Running post-deploy
                 command: |
                   /usr/bin/python3 -m pip install -r requirements.txt
+                  git config user.email "Tharlaw@example.com"
+                  git config user.name "Tharlaw"
                   semantic-release publish
