--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+alembic==1.5.3
 flasgger==0.9.5
 Flask==1.1.2
 gunicorn==20.0.4
+psycopg2==2.8.6
 pytest==6.2.1
 pytest-cov==2.11.1
 python-semantic-release==7.11.0
+SQLAlchemy==1.3.23
