chore: run alembic on post-deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,9 @@ workflows:
             - build-and-test
           filters:
             branches:
-              only: develop
+              only:
+                - develop
+                - /infra*/
           force: true
           pre-steps:
             - run:
@@ -64,6 +66,10 @@ workflows:
                   sudo apt upgrade
                   sudo apt install python3-pip
                   /usr/bin/python3 -m pip install --upgrade pip
+          post-steps:
+            - run:
+                name: Running post-deploy
+                command: |
                   /usr/bin/python3 -m pip install -r requirements.txt
                   alembic upgrade head
       - heroku/deploy-via-git:
@@ -82,12 +88,12 @@ workflows:
                   sudo apt update
                   sudo apt install python3-pip
                   /usr/bin/python3 -m pip install --upgrade pip
-                  /usr/bin/python3 -m pip install -r requirements.txt
-                  alembic upgrade head
           post-steps:
             - run:
                 name: Running post-deploy
                 command: |
+                  /usr/bin/python3 -m pip install -r requirements.txt
+                  alembic upgrade head
                   git config user.email "Tharlaw@example.com"
                   git config user.name "Tharlaw"
                   semantic-release publish
