--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.5.3
 flasgger==0.9.5
 Flask==1.1.2
+Flask-WTF==0.14.3
 gunicorn==20.0.4
+marshmallow==3.10.0
 psycopg2==2.8.6
 pytest==6.2.1
 pytest-cov==2.11.1
