--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,29 +2,74 @@
 
 version: 2.1
 
+executors:
+  python-with-database:
+    docker:
+      - image: circleci/python:3.8
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      - image: circleci/postgres:9.6.5-alpine
+        environment:
+          POSTGRES_USER: myuser
+          POSTGRES_DB: mydatabase
+          POSTGRES_PASSWORD: ""
+
 orbs:
-  python: circleci/python@0.2.1
   heroku: circleci/heroku@1.2.4
 
 jobs:
   build-and-test:
     description: Build and Test
-    executor: python/default
+    executor: python-with-database
+    working_directory: ~/repo
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+
+      - run:
+          name: Wait for db
+          command: |
+            dockerize -wait tcp://localhost:5432 -timeout 1m
+
       - run:
           name: Setup Code Climate test-reporter
           command: |
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
             ./cc-test-reporter before-build
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv ~/venv
+            . ~/venv/bin/activate
+            python3 -m pip install --upgrade pip
+            python3 -m pip install -r requirements.txt
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
+
       - run:
           name: Run tests
           command: |
-            python -m pytest --cov-report xml --cov-report term --cov .
+            . ~/venv/bin/activate
+            python3 -m pytest --cov-report xml --cov-report term --cov .
+
       - run:
           name: Send coverage to Code Climate
           command: |
